# interactive_camera_lidar_calibration

./: README.md  pyproject.toml
samples/pcds/: pc_0000.pcd  pc_0001.pcd  pc_0002.pcd  pc_0003.pcd  pc_0004.pcd
src/recalib/: __init__.py  core.py  interactive_calibration.py
src/recalib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sensorcal/: __init__.py  app.py  cli.py
src/sensorcal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sensorcal/samples/pcds/: pc_0000.pcd  pc_0001.pcd  pc_0003.pcd
tests/: test_core.py
