[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensorcal"
version = "0.1.2"
description = "SensorCal package"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Murdism", email = "murdiszm@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pyyaml",
  "opencv-python",
  "open3d",
  "pillow",
]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
sensorcal = "sensorcal.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sensorcal = ["samples/images/*.png", "samples/pcds/*.pcd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
